# rdap_client

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
rdap_client/: Cargo.toml
rdap_client/benches/: benchmark.rs
rdap_client/src/: lib.rs
rdap_client/test_data/autnum/: autnum_27.json  autnum_afrinic_as36864.json  autnum_apnic_as4608.json  autnum_arin_as256.json  autnum_lacnic_as27648.json  autnum_ripe_as1234.json
rdap_client/test_data/bootstrap/: asn.json  object-tags.json
rdap_client/test_data/domain/: domain_24.json  domain_afnic.json  domain_ripe_reverse.json
rdap_client/test_data/entity/: entity_15.json
rdap_client/test_data/error/: error_ripe_404.json
rdap_client/test_data/ip_network/: ip_network_afrinic.json  ip_network_apnic_1_1_1_1.json  ip_network_arin_3_3_3_3.json
rdap_client/test_data/nameserver/: nameserver_18.json  nameserver_19.json  nameserver_20.json  nameserver_fred.json
rdap_types/: Cargo.toml  test_data
rdap_types/benches/: benchmark.rs
rdap_types/src/: lib.rs
src/: bootstrap.rs  lib.rs  parser.rs
test_data/: arin_originas0_networkSearchResults.json
test_data/bootstrap/: dns.json
test_data/domain/: domain_23.json  domain_fred.json
test_data/entity/: entity_17.json  entity_fred.json  entity_ripe.json
test_data/error/: error_28.json  error_29.json
test_data/ip_network/: ip_network_26.json  ip_network_br.json  ip_network_lacnic.json  ip_network_ripe_193_0_0_0.json
