[package]
name = "rdap_client"
version = "0.1.0"
authors = ["Jakub Onderka <j.onderka@nukib.cz>"]
license = "BSD-2-Clause"
keywords = ["rdap", "whois"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "README.md"
repository = "https://github.com/JakubOnderka/rdap_client"
homepage = "https://github.com/JakubOnderka/rdap_client"
documentation = "https://docs.rs/rdap_client"
description = """
Async and fast RDAP client and parser.
"""
edition = "2018"
exclude = [".travis.yml", "test_data/*"]

[badges]
travis-ci = { repository = "JakubOnderka/rdap_client" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = {  version = "0.10.0", features = ["json"] }
bytes = "0.5.3"
futures = "0.3.1"
ip_network = { version = "0.3.4", features = ["serde"] }
ip_network_table = "0.1.1"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
