[package]
name = "rdap_client"
version = "0.3.0"
authors = ["Jakub Onderka <jakub.onderka@gmail.cz>"]
license = "BSD-2-Clause"
keywords = ["rdap", "whois"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "../README.md"
repository = "https://github.com/JakubOnderka/rdap_client"
homepage = "https://github.com/JakubOnderka/rdap_client"
documentation = "https://docs.rs/rdap_client"
description = """
Async and fast RDAP client and parser.
"""
edition = "2018"
exclude = [".travis.yml", "test_data/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.11.0", features = ["json", "gzip"] }
bytes = "1.0"
futures = "0.3.1"
ip_network = { version = "0.4.0", features = ["serde"] }
ip_network_table = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdap_types = { path = "../rdap_types", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
