[package]
name = "rdap_types"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Jakub Onderka <jakub.onderka@gmail.cz>", "Peter Parkanyi <p@symmetree.dev>"]
license = "BSD-2-Clause"
keywords = ["rdap", "whois"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "../README.md"
repository = "https://github.com/JakubOnderka/rdap_client"
homepage = "https://github.com/JakubOnderka/rdap_client"
documentation = "https://docs.rs/rdap_client"
description = """
Async and fast RDAP client and parser.
"""
exclude = [".travis.yml", "test_data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
